# type_erasure

emtypen/: emtypen.py  headers.hpp
emtypen/forms/: basic.hpp  cow.hpp  sbo.hpp  sbo_cow.hpp
emtypen/headers/: basic.hpp
forms/: basic.hpp  cow.hpp  sbo.hpp  sbo_cow.hpp
headers/: sbo.hpp  sbo_cow.hpp
test/: CMakeLists.txt  mock_fooable.hh  util.hh
test/basic/: header.hh  heap_allocations.cpp  interface.hh  plain_interface.hh  test.cpp  type_erase
test/cow/: interface.hh  plain_interface.hh  test.cpp  type_erase
test/sbo/: heap_allocations.cpp  interface.hh  test.cpp  type_erase
test/sbo_cow/: interface.hh  test.cpp  type_erase
